// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render summary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header-title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totaling 
      <span>
        $2.35
      </span>
    </h1>
    <div>
      <Link
        className="create-button"
        to="/add"
      >
        Add an Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render summary with mutiply expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header-title"
    >
      Viewing 
      <span>
        3
      </span>
       
      expenses
       totaling 
      <span>
        $2,555,555.35
      </span>
    </h1>
    <div>
      <Link
        className="create-button"
        to="/add"
      >
        Add an Expense
      </Link>
    </div>
  </div>
</div>
`;
